deploy/grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: seedwing-monitoring
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: letsencrypt-certificate
    cert-utils-operator.redhat-cop.io/inject-CA: "false"
  name: seedwing-grafana
  namespace: seedwing
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  host: monitoring.playground.seedwing.io
  port:
    targetPort: grafana
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
